--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "files": [
     "/lib"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/apester-pub/apester-react-widgets.git"
+  },
   "scripts": {
     "build": "yarn build:esm && yarn build:cjs",
     "build:esm": "tsc",
